@@ -33,7 +33,7 @@ html {
 }
 body {
 	font-size: 62.5%;
-	background: #f1f1f1;
+	background: #DBE3F0;
 }
 a, a:visited, h1 a:visited, a:active, #main .selected .actions a, #main .selected .actions a:link, #main .selected .actions a:visited, #help dt {
 	color: #3478e3;
@@ -180,7 +180,8 @@ color:#3478e3;
 }
 #postbox .avatar img {
 	padding: 0;
-	border: 1px solid #ccc;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
 }
 #postbox .inputarea {
 	padding-left: 66px;
@@ -286,10 +287,16 @@ h3 {
 	color: #777;
 	font-weight: bold;
 }
+h4 {
+	font-size: 1em;
+	color: #777;
+	font-weight: bold;
+}
 #main img.avatar {
 	float: left;
 	margin-right: 15px;
-	border: 1px solid #ccc;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
 	margin-top: 0;
 	margin-left: 2px;
 }
@@ -508,6 +515,8 @@ h2 a.rss:hover {
 	vertical-align:middle;
 	width:32px;
 	height:32px;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
 }
 #sidebar a.profile-nick {
 font-size:1.7em;
@@ -941,7 +950,15 @@ margin-bottom: .3em;
 /* /app/omb/views/posts/_entry.html */
 
 #entry-msg {
-margin:5px;
+	margin:5px;
+}
+.entry-reply-msg {
+	margin:5px;
+}
+.entry-reply-author {
+	float:left;
+	margin-left:2em;
+	margin-bottom:1em;
 }
 .entry-avatar {
 	float:left;
@@ -949,9 +966,17 @@ margin:5px;
 	margin-left:0.5em;
 	width:80px;
 	height:80px;
-	border-width:thin;
-	border-color:#777;
-	border-style:solid;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
+}
+.entry-avatar-reply {
+	float:left;
+	margin-right:0.5em;
+	margin-left:0.5em;
+	width:40px;
+	height:40px;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
 }
 #bookmark-this {
 	position:relative;
@@ -990,9 +1015,8 @@ margin:5px;
 }
 .profile-img {
 	vertical-align:middle;
-	border-width:thin;
-	border-color:#777;
-	border-style:solid;
+	border: 3px solid #fff;
+	outline:1px solid #ccc;
 	width:96px;
 	height:96px;
 }
